[package]
name = "mlatu"
version = "0.1.0"
edition = "2021"
description = "The mlatu programming language"
repository = "https://github.com/mlatu-lang/libraries"
readme = "README.md"
keywords = ["parser", "langdev", "language"]
categories = ["compilers"]
license-file = "https://mlatu-lang.github.io/license/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
lasso = { version  = "0.6.0", features = ["multi-threaded"] }
typed-arena = "2.0.1"

[features]
